# hollywood

./: CHANGELOG.md  CONTRIBUTING.md  FALLSOFTCO_INSTALL.md  GITHUB_LAUNCH_CHECKLIST.md  NEXT_STEPS.md  PUBLISHING.md  README.md  hollywood  hollywood.py  hollywood.service  hollywoodctl  hollywoodctl.py  install-systemd-user-service.sh  pyproject.toml
.github/workflows/: python-tests.yml
examples/: hollywood-session-demo.sh  losangelex-env.sh
tests/: test_hollywood.py
