[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hollywood-cli"
version = "0.1.0"
description = "Local pull-based coordination room for CLI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "FallSoftCo" },
]
keywords = ["agents", "cli", "coordination", "chat", "sqlite"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/FallSoftCo/hollywood"
Repository = "https://github.com/FallSoftCo/hollywood"
Issues = "https://github.com/FallSoftCo/hollywood/issues"

[project.scripts]
hollywood = "hollywood:main"
hollywoodctl = "hollywoodctl:main"

[tool.setuptools]
py-modules = ["hollywood", "hollywoodctl"]
